--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "sass": "^1.58.3"
