--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "eslint-config-prettier": "^8.7.0",
+    "prettier": "^2.8.4",
     "sass": "^1.58.3"
   }
 }
